# rusty-rat

./: .gitignore  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  execute.rs  lib.rs  main.rs
crates/client/: Cargo.toml  client_identity.secret
crates/client/src/: api_calls.rs  config.rs  lib.rs  main.rs  parser.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/crypto/: encryption.rs  identity_keys.rs  mod.rs
crates/common/src/cryptographic_functions/: encryption.rs  identity_keys.rs  mod.rs  prekey.rs
crates/common/src/jobs/: mod.rs
crates/common/src/networking/: ipconnection.rs  mod.rs
crates/common/src/networking/crypto/: identity_keys.rs  mod.rs
crates/common/src/schemas/: agents.rs  errors.rs  jobs.rs  mod.rs  response.rs
crates/rat-server/: Cargo.toml
crates/rat-server/src/: lib.rs  main.rs
crates/rat-server/src/api/routes/: agents.rs  jobs.rs  mod.rs
crates/rat-server/src/configuration/: mod.rs  r-serv.key.pem  settings.toml
crates/rat-server/src/migrations/: init.sql
crates/rat-server/src/repository/: agents.rs  jobs.rs  mod.rs
crates/rat-server/src/services/: agents.rs  entities.rs  jobs.rs  mod.rs
crates/rat-server/src/services/postgres_db/: mod.rs
src/: Cargo.toml  config.toml
src/agent/: Cargo.toml
src/client/: Cargo.toml
src/client/src/: lib.rs  main.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/common/src/networking/crypto/: encryption.rs  identity_keys.rs  mod.rs
src/rat-server/: Cargo.toml
src/rat-server/src/: main.rs
src/rat-server/src/configuration/: r-serv.cert.pem
