[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
#anyhow = "1.0.98"
common = {path="../common"}
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde = "1.0.219"
ureq = { version = "3.0.11", features = ["json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0.1", features = ["serde"] }
