[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.37", features = ["derive"] }
common = { path = "../common" }
ed25519-dalek = { version = "2.0.1", features = [
    "rand_core",
    "serde",
    "signature",
] }
rand = "0.9.1"
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
x25519-dalek = "2.0.1"
zeroize = "1.8.1"
