[package]
name = "rat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
config = "0.15.11"
common = { path = "../common" }
env_logger = "0.11.7"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tower-http = "0.6.2"
tower = "0.5.2"
serde_json = "1.0.140"
axum-server = { version = "0.7.2", features = [
    "rustls",
    "rustls-pemfile",
    "tls-rustls",
] }
blake2 = "0.10.6"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand = "0.9.0"
sqlx = { version = "0.8.5", features = ["postgres", "uuid", "json", "chrono"] }
uuid = { version = "1.16.0", features = ["rng-rand", "serde", "v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["serde", "signature"] }
base64 = "0.22.1"

[dependencies.axum]
version = "0.8.3"

[dependencies.tokio]
version = "1.44.1"
features = ["rt-multi-thread"]
